5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1831_1644.log
== TEST (2019-06-13 16:13:17) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep[i] + 1
cont = zeros(rep, dtype = int)

for i in range(size(ind)):
	if(rep[i] <= 5.0 ):
		ind[i] + ind[i] 1
print(rep)
print(ind)
		


-- ERROR:
File "XXXX", line 15
    ind[i] + ind[i] 1
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:40) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep + 1
cont = zeros(rep, dtype = int)

for i in range(size(ind)):
	if(rep[i] <= 5.0 ):
		ind[i] + ind[i] 1
print(rep)
print(ind)
		


-- ERROR:
File "XXXX", line 15
    ind[i] + ind[i] 1
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:46) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep = rep + 1
cont = zeros(rep, dtype = int)

for i in range(size(ind)):
	if(rep[i] <= 5.0 ):
		ind[i] + ind[i] 1
print(rep)
print(ind)
		


-- ERROR:
File "XXXX", line 15
    ind[i] + ind[i] 1
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:17) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep[i] + 1
cont = zeros(rep, dtype = int)

for i in range(size(ind)):
	if(rep[i] <= 5.0 ):
		ind[i] = ind[i] + 1
print(rep)
print(ind)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:29) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
#ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep[i] + 1
cont = zeros(rep, dtype = int)

#for i in range(size(ind)):
	if(rep[i] <= 5.0 ):
		ind[i] = ind[i] + 1
print(rep)
#print(ind)
		


-- ERROR:
File "XXXX", line 14
    if(rep[i] <= 5.0 ):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:42) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
#ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep[i] + 1
cont = zeros(rep, dtype = int)

#for i in range(size(ind)):
	#if(rep[i] <= 5.0 ):
	#	ind[i] = ind[i] + 1
print(rep)
#print(ind)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:31) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
#ind = array(eval(input("valor dos indices:")))

cont = 0

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep[i] + 1
#cont = zeros(rep, dtype = int)

#for i in range(size(ind)):
	#if(rep[i] <= 5.0 ):
	#	ind[i] = ind[i] + 1
print(rep)
#print(ind)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:56) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
#ind = array(eval(input("valor dos indices:")))

cont = (0)

for i in range(size(rep)):
	if (rep[i] <= 5.0 ):
		rep[i] = rep[i] + 1
#cont = zeros(rep, dtype = int)

#for i in range(size(ind)):
	#if(rep[i] <= 5.0 ):
	#	ind[i] = ind[i] + 1
print(rep)
#print(ind)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:39) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
#ind = array(eval(input("valor dos indices:")))

cont = (0)

for i in range(size(rep)):
	if (rep[i] < 5.0 ):
		rep[i] = rep[i] + 1
#cont = zeros(rep, dtype = int)

#for i in range(size(ind)):
	#if(rep[i] <= 5.0 ):
	#	ind[i] = ind[i] + 1
print(rep)
#print(ind)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:34) 
-- CODE:
from numpy import*

rep = array(eval(input("quantidade de alunos reprovados:")))
#ind = array(eval(input("valor dos indices:")))

cont = (0)

for i in range(size(rep)):
	if (rep[i] < 5.0 ):
		rep[i] = rep[i] + 1
		
ind = zeros(rep, dtype = int):
	a = 0 
	for i in range(size(rep)):
		if
		
		


-- ERROR:
File "XXXX", line 12
    ind = zeros(rep, dtype = int):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
